--- a/bcard/index.html
+++ b/bcard/index.html
@@ -41,7 +41,7 @@
 
     #page1 { background: #0d0d0d; }
     #page2 { background: #d71016; }
-    #page3 { background: #1a1a1a; }
+    #page3 { background: url('1.jepg') no-repeat center center fixed; }
 
     h1, h2, p {
       margin: 0.75rem 0;
@@ -110,6 +110,9 @@
 
     .left-zone { left: 0; }
     .right-zone { right: 0; }
+
+
+
   </style>
 </head>
 <body>
@@ -139,8 +142,8 @@
   <!-- Page 2: Main Card -->
   <section id="page2">
     <img src="logo_bc.png" alt="Agent" class="profile-img" />
-    <h1>Jane Doe</h1>
-    <h2>Real Estate Specialist</h2>
+    <h1>Agent Name</h1>
+    <h2>Real & ProperT</h2>
     <p>Helping you find your dream home.</p>
   </section>
 
