--- a/bcard/index.html
+++ b/bcard/index.html
@@ -41,7 +41,7 @@
 
     #page1 { background: #0d0d0d; }
     #page2 { background: #d71016; }
-    #page3 { background: url('1.jepg') no-repeat center center fixed; }
+    #page3 { background: url('1.jpeg') no-repeat center center fixed; }
 
     h1, h2, p {
       margin: 0.75rem 0;
