--- a/bcard/index.html
+++ b/bcard/index.html
@@ -1,119 +1,137 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Agent Virtual Card</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    * { box-sizing: border-box; }
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-      font-family: 'Orbitron', 'Inter', sans-serif;
-      overflow: hidden;
-      background-color: #000;
-      color: #fff;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Agent Virtual Card</title>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+<style>
+  * { box-sizing: border-box; }
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    font-family: 'Orbitron', 'Inter', sans-serif;
+    overflow: hidden;
+    background-color: #000;
+    color: #fff;
+  }
+  .wrapper {
+    display: flex;
+    width: 300vw;
+    height: 100vh;
+    transition: transform 0.6s ease-in-out;
+    transform: translateX(-100vw);
+  }
+  section {
+    width: 100vw;
+    height: 100vh;
+    padding: 2rem;
+    overflow-y: auto;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #page1 { background: #0d0d0d; }
+  #page2 { background: #d71016; }
+  #page3 { background: url('1.jpeg') no-repeat center center fixed; background-size: cover; }
+  h1, h2, p {
+    margin: 0.75rem 0;
+    text-align: center;
+  }
+  input, select, textarea {
+    width: 100%;
+    max-width: 400px;
+    padding: 0.8rem;
+    margin: 0.5rem 0;
+    border-radius: 10px;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Inter', sans-serif;
+  }
+  button, .action-button {
+    background: linear-gradient(145deg, #d71016, #a50e12);
+    color: white;
+    padding: 0.9rem 1.5rem;
+    margin: 0.5rem;
+    border-radius: 15px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    font-family: 'Orbitron', sans-serif;
+    width: 180px;
+    text-align: center;
+  }
+  button:hover, .action-button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.6);
+  }
+  .actions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+  .profile-img {
+    width: 180px;
+    height: 180px;
+    border-radius: 100px;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    border: 5px solid white;
+  }
+  .nav-zone {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 20vw;
+    z-index: 10;
+  }
+  .left-zone { left: 0; }
+  .right-zone { right: 0; }
 
-    .wrapper {
-      display: flex;
-      width: 300vw;
-      height: 100vh;
-      transition: transform 0.6s ease-in-out;
-      transform: translateX(-100vw); /* Start on center page */
-    }
-
-    section {
-      width: 100vw;
-      height: 100vh;
-      padding: 2rem;
-      overflow-y: auto;
-      flex-shrink: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #page1 { background: #0d0d0d; }
-    #page2 { background: #d71016; }
-    #page3 { background: url('1.jpeg') no-repeat center center fixed; }
-
-    h1, h2, p {
-      margin: 0.75rem 0;
-      text-align: center;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      max-width: 400px;
-      padding: 0.8rem;
-      margin: 0.5rem 0;
-      border-radius: 10px;
-      border: none;
-      font-size: 1rem;
-      font-family: 'Inter', sans-serif;
-    }
-
-    button, .action-button {
-      background: #d71016;
-      color: white;
-      padding: 0.9rem 1.5rem;
-      margin: 0.5rem;
-      border-radius: 50px;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      font-size: 0.9rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      transition: background 0.3s ease;
-      font-family: 'Orbitron', sans-serif;
-    }
-
-    button:hover, .action-button:hover {
-      background: #e52026;
-    }
-
-    .actions {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .actions .action-button {
-      width: 180px;
-      text-align: center;
-    }
-
-    .profile-img {
-      width: 180px;
-      height: 180px;
-      border-radius: 100px;
-      object-fit: cover;
-      margin-bottom: 1rem;
-      border: 5px solid white;
-    }
-
-    .nav-zone {
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      width: 20vw;
-      z-index: 10;
-    }
-
-    .left-zone { left: 0; }
-    .right-zone { right: 0; }
-
-
-
-  </style>
+  /* Modal Styles */
+  .modal-overlay {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.7);
+    z-index: 50;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal {
+    background: #1a1a1a;
+    padding: 2rem;
+    border-radius: 15px;
+    max-width: 400px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.5);
+  }
+  .modal h2 {
+    margin-bottom: 1rem;
+  }
+  .modal p {
+    margin-bottom: 1.5rem;
+    font-family: 'Inter', sans-serif;
+  }
+  .modal-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .modal-buttons button {
+    flex: 1;
+  }
+</style>
 </head>
 <body>
 
@@ -124,7 +142,7 @@
   <!-- Page 1: Contact Form -->
   <section id="page1">
     <h1>Contact Me</h1>
-    <form onsubmit="event.preventDefault(); alert('Form submitted!');">
+    <form onsubmit="event.preventDefault(); openModal('Thank You!', 'Your message has been sent successfully. We will contact you soon.')">
       <input type="text" placeholder="Full Name *" required />
       <input type="tel" placeholder="Contact Number *" required />
       <input type="email" placeholder="Email Address *" required />
@@ -151,29 +169,45 @@
   <section id="page3">
     <h1>Explore</h1>
     <div class="actions">
-      <div class="action-button" onclick="shareVia('email')">Share via Email</div>
-      <div class="action-button" onclick="shareVia('whatsapp')">Share via WhatsApp</div>
-      <div class="action-button" onclick="window.open('https://wa.me/27660000000')">WhatsApp Chat</div>
-      <div class="action-button" onclick="window.location='mailto:jane@example.com'">Email Me</div>
-      <div class="action-button" onclick="window.location='tel:+27660000000'">Call Me</div>
-      <div class="action-button">Leave a Review</div>
-      <div class="action-button">FAQ's</div>
-      <div class="action-button">Calculators</div>
-      <div class="action-button">Home Matters Blog</div>
-      <div class="action-button" onclick="window.open('https://facebook.com')">Facebook</div>
-      <div class="action-button" onclick="window.open('https://instagram.com')">Instagram</div>
-      <div class="action-button" onclick="window.open('https://linkedin.com')">LinkedIn</div>
+      <div class="action-button" onclick="openModal('Share via Email', 'Do you want to share this via Email?', () => shareVia('email'))">Share via Email</div>
+      <div class="action-button" onclick="openModal('Share via WhatsApp', 'Do you want to share this via WhatsApp?', () => shareVia('whatsapp'))">Share via WhatsApp</div>
+      <div class="action-button" onclick="openModal('WhatsApp Chat', 'Start a WhatsApp chat?', () => window.open('https://wa.me/27660000000'))">WhatsApp Chat</div>
+      <div class="action-button" onclick="openModal('Email Me', 'Send an email to the agent?', () => window.location='mailto:jane@example.com')">Email Me</div>
+      <div class="action-button" onclick="openModal('Call Me', 'Call the agent now?', () => window.location='tel:+27660000000')">Call Me</div>
+      <div class="action-button" onclick="openModal('Leave a Review', 'You can leave your review here.')">Leave a Review</div>
+      <div class="action-button" onclick="openModal('FAQ\'s', 'Here are some frequently asked questions...')">FAQ's</div>
+      <div class="action-button" onclick="openModal('Calculators', 'Access real estate calculators.')">Calculators</div>
+      <div class="action-button" onclick="openModal('Home Matters Blog', 'Visit the blog for more info.')">Home Matters Blog</div>
+      <div class="action-button" onclick="openModal('Facebook', 'Open our Facebook page?', () => window.open('https://facebook.com'))">Facebook</div>
+      <div class="action-button" onclick="openModal('Instagram', 'Open our Instagram page?', () => window.open('https://instagram.com'))">Instagram</div>
+      <div class="action-button" onclick="openModal('LinkedIn', 'Open our LinkedIn profile?', () => window.open('https://linkedin.com'))">LinkedIn</div>
     </div>
   </section>
 </div>
 
+<!-- Modal -->
+<div class="modal-overlay" id="modalOverlay">
+  <div class="modal">
+    <h2 id="modalTitle"></h2>
+    <p id="modalMessage"></p>
+    <div class="modal-buttons">
+      <button onclick="closeModal()">Cancel</button>
+      <button id="modalConfirmBtn">OK</button>
+    </div>
+  </div>
+</div>
+
 <script>
   const wrapper = document.getElementById("wrapper");
+  const modalOverlay = document.getElementById("modalOverlay");
+  const modalTitle = document.getElementById("modalTitle");
+  const modalMessage = document.getElementById("modalMessage");
+  const modalConfirmBtn = document.getElementById("modalConfirmBtn");
+  let modalAction = null;
 
   function goToPage(index) {
     wrapper.style.transform = `translateX(-${index * 100}vw)`;
   }
-
   function shareVia(type) {
     const text = "Check out this real estate agent: Jane Doe!";
     const url = window.location.href;
@@ -182,6 +216,19 @@
     } else if (type === "whatsapp") {
       window.open(`https://wa.me/?text=${encodeURIComponent(text + ' ' + url)}`);
     }
+  }
+  function openModal(title, message, action = null) {
+    modalTitle.textContent = title;
+    modalMessage.textContent = message;
+    modalAction = action;
+    modalOverlay.style.display = "flex";
+  }
+  function closeModal() {
+    modalOverlay.style.display = "none";
+  }
+  modalConfirmBtn.onclick = () => {
+    if (modalAction) modalAction();
+    closeModal();
   }
 </script>
 
